# anitomy

./: README.md  meson.build
anitomy/: anitomy.cpp  anitomy.h  anitomyc.cpp  anitomyc.h  astring.cpp  astring.h  element.h  keyword.h  meson.build  options.h  parser.cpp  parser.h  parser_number.cpp  token.cpp  token.h  tokenizer.cpp  tokenizer.h
test/: data.json  meson.build  test.c  test.h
